2000-11-28  John Harper  <jsh@eazel.com>

	* shell.jl (display-flattened): if the layout widget is a
	container, give it a non-zero border-width

2000-11-27  John Harper  <jsh@eazel.com>

	* widgets/frame-style.jl (make-frame-style-item): reversed
	order of combo box and label; don't set usize of text box

	* layout.jl: renamed `expand' flag as `expand-vertically';
	added an `expand-horizontally' flag; changed `framed' flag to
	use a vbox instead of a frame widget

2000-11-21  John Harper  <jsh@eazel.com>

	* layout.jl (layout-box): don't set the border of the box
	(document-slot): when checking whether a doc string is given or
	not, also check if the value is the null string

	* widgets/command.jl (update-params): when ref'ing commands
	without arguments, remember to use command-name to remove any
	keywords in the command definition. Fixes #4827

2000-11-17  John Harper  <jsh@eazel.com>

	* main.jl.in: don't initialize backtrace-on-error

2000-11-16  John Harper  <jsh@eazel.com>

	* slot.jl: added a `flags' field to the slot structure, used to
	store flags for when displaying widgets

	* layout.jl: check slot-flags, handle `expand' and `framed'

	* wm.jl (wm-locale-dir): dereference sawfish-locale-directory
	on the remote side, instead of using bindtextdomain

2000-11-14  John Harper  <jsh@eazel.com>

	* widgets/workspace-geometry.jl (monitor-pixbuf-file): search
	load-path for the `../monitor.png' file, instead of just
	assuming that it's relative to the first item of the list

2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-11-06  John Harper  <jsh@eazel.com>

	* group.jl, shell.jl: fixed some bugs introduced by the change
	to refresh groups after slot commits

2000-11-02  John Harper  <jsh@eazel.com>

	* group.jl (fetch-group, select-group): added keyword parameter
	FORCE that overrides certain checks

	(refresh-groups-for-slots): new exported function; given a list
	of slots it will resync any groups that contain any of these
	slots
